@@ -10,9 +10,6 @@ top_margin = 13
 bottom_margin = 13
 
 # background
-bg_top_height = 14
-bg_body_height = 5
-bg_bottom_height = 14
 bg_tile = true
 bg_enable_trans = true
 
@@ -24,10 +21,6 @@ button_use_mask = true
 
 # slider
 slider_width = 10
-slider_top_height = 5
-slider_body_height = 3
-slider_bottom_height = 5
-slider_knob_height = 10
 slider_tile = true
 slider_use_mask = true
 
